# bilidownload

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
bilidownload/: constants.py  user_service.py  video_service.py
bilidownload/proxy/: __init__.py  constants.py  proxy_service.py
bilidownload/proxy/schemes/: __init__.py  bangumi.py  base.py  cheese.py  finger.py  login.py  user_info.py  video.py
bilidownload/video/: __init__.py  bangumi.py  base.py  cheese.py  constants.py  schemes.py  video.py  video_service.py
