[tool.poetry]
name = "bilidownload"
version = "0.1.0"
description = "Provides interfaces to download videos from Bilibili"
authors = ["usharerose <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
ipython = "8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
